# django_test

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
django_project/: settings.py  urls.py
main_app/: admin.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_registrationmodel.py
main_app/templates/: base.html  carousel.html  contact.html  login.html  register.html
